--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1463,7 +1463,12 @@ footer#section-footer li a:hover {
 .pane-menu-menu-about-us, .pane-accreditation{
 	margin-right:25px;
 }
-/* HOMEPAGE TABS AUDIENCE */
+
+
+
+/******************************
+ *  HOMEPAGE SPECIFIC STYLES  *
+ ******************************/
 #quicktabs-home_page_tabs ul{
 	min-height:23px;
 	width:508px;
@@ -1484,14 +1489,14 @@ footer#section-footer li a:hover {
 	border-top-left-radius: 6px;
 	border-bottom-right-radius: 6px;
 }
-#quicktabs-home_page_tabs ul a:link{
+#quicktabs-home_page_tabs li a:link{
 	color:#fff;
 	margin:1px 1px 0 -11px;
 	padding:3px 9px 8px;
 	
 }
 
-#quicktabs-home_page_tabs ul a:hover{
+#quicktabs-home_page_tabs li a:hover{
 	-webkit-border-top-right-radius:6px;
 	-webkit-border-top-left-radius: 6px;
 	-moz-border-radius-topleft: 6px;
@@ -1500,8 +1505,25 @@ footer#section-footer li a:hover {
 	border-top-right-radius: 6px;
 	border:1px solid #dddedf;
 	border-bottom:none;
-	margin:0 0 0 -12px;
+	margin:0;
 	background:#fff;
+	color:#27282d;
+}
+
+#quicktabs-home_page_tabs li.active{
+	-webkit-border-top-right-radius:6px;
+	-webkit-border-top-left-radius: 6px;
+	-moz-border-radius-topleft: 6px;
+	-moz-border-radius-topright: 6px;
+	border-top-left-radius: 6px;
+	border-top-right-radius: 6px;
+	border:1px solid #dddedf;
+	border-bottom:none;
+	margin:0px;
+	background:#fff;
+	
+}
+#quicktabs-home_page_tabs li.active a{
 	color:#27282d;
 }
 
