--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -170,6 +170,7 @@ a, a:link, a:visited, a:focus a:active {
 p {
 	margin:0 0 1.5em 0;
 	padding: 0;
+	word-spacing: 1px;
 }
 .lynchburg-main p a:link {
 	text-decoration: underline;
@@ -1475,7 +1476,7 @@ footer#section-footer li a:hover {
 	margin:0px;
 	padding: 8px 0 0 0;
 	/* for non-css3 browsers */
-	background: #790600;
+	background:#790600;
 	/* for IE */
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8f0900', endColorstr='#5a0500');
 	/* for webkit browsers */
@@ -1527,18 +1528,27 @@ footer#section-footer li a:hover {
 .pane-quicktabs-home-page-tabs{
 	max-width:508px;
 	min-height:274px;
-	-moz-box-shadow: 3px 3px 4px #dddedf;
-	-webkit-box-shadow: 3px 3px 4px #dddedf;
-	box-shadow: 3px 3px 4px #dddedf;
+	/* for non-css3 browsers */
+	background:#fff;
+	/* for IE */
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff', endColorstr='#eeeff3');
+	/* for webkit browsers */
+	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff), to(#eeeff3), color-stop(.6, #fff));
+	/* for firefox 3.6+ */
+	background: -moz-linear-gradient(25% 87% 90deg, #fff, #eeeff3, #fff 100%);
+	-moz-box-shadow: 3px 3px 6px #dddedf;
+	-webkit-box-shadow: 3px 3px 6px #dddedf;
+	box-shadow: 3px 3px 6px #dddedf;	
 	/* For IE 8 */
-	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#dddedf')";
+	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=-90, Color='#dddedf')";
 	/* For IE 5.5 - 7 */
-	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#dddedf');
-	background:#fff url(../images/bg-audience.jpg) no-repeat bottom center;
+	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=-90, Color='#dddedf');
 }
+
 .pane-quicktabs-home-page-tabs .block-inner{
 	padding:20px;
 }
+
 
 
 
