--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
@@ -4,16 +4,13 @@ body {
 	background: url(../images/bg-body-top3.jpg) repeat-x top left;
 }
 .section-header {
-	width:1500px;
+	/*width:1500px;*/
 	height:142px;
 	margin:0 auto;
 	padding:0;
 	background: transparent url(../images/bg-header-arch.jpg) no-repeat top center;
 }
-.front .section-header {
-	/* custom homepage background overrides the above default background ^ */
-	/* also add some more padding here */
-}
+
 
 .zone-menu-wrapper {
 	margin-top: -60px;
@@ -35,3 +32,8 @@ body {
  body.front {
  	background:#f9f9f9 url("../images/home/bg-stripe-home1.jpg") repeat-x top left;
  }
+ 
+ .front .section-header {
+ 	/* custom homepage background overrides the above default background ^ */
+ 	/* also add some more padding here */
+}
