--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1538,8 +1538,6 @@ footer#section-footer li a:hover {
 
 
 
-
-
 /******************************
  *  HOMEPAGE HEADER           *
  ******************************/
@@ -1549,20 +1547,22 @@ footer#section-footer li a:hover {
  	background:#f9f9f9 url("../images/home/bg-stripe-home.jpg") repeat-x top left;
  }
  */
+ 
  body.front div#page header#section-header {
  	margin:0 auto;
- 	/*width:1500px;*/
  	height: 450px;
  	background: #47515b url(../images/home/big-image2.jpg) no-repeat top center;
  }
+ 
  body.front section#section-content {
  	background: transparent url(../images/home/convex-curve.png) no-repeat top center;
- 	width:1500px;
  	margin:0 auto;
  	margin-top:-22px;
  }
- body.front #page header { width:1500px; margin:0 auto; 
+ 
+ body.front #page header {  margin:0 auto; 
  }
+ 
  body.front section#secton-content .zone-content-wrapper {
  	margin:0 auto;
  }
