table.footer-list:hover style added to global.css

--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1462,6 +1462,10 @@ table.footer-list {
 	border:none;
 	background:none;
 }
+table.footer-list:hover {
+	border:none;
+	background:none;
+}
 
 
 /******************************
