--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1458,13 +1458,17 @@ footer#section-footer li a:hover {
 	margin-right:25px;
 }
 
-table.footer-list {
+table.footer-list, table.footer-list:hover {
 	border:none;
 	background:none;
-}
-table.footer-list:hover {
-	border:none;
-	background:none;
+	margin:0;
+	-moz-border-radius:0;
+	-webkit-border-radius:0;
+	border-radius:0;
+	border-collapse:inherit;
+	-moz-box-shadow:none;
+	-webkit-box-shadow:none;
+	box-shadow:none;
 }
 
 
