--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -823,6 +823,14 @@ table.feature_table tbody tr:hover {
 	-webkit-transition: all 0.2s linear 0s;
 	-o-transition: all 0.2s linear 0s;
 }
+
+table.feature_table tr:hover td,  table.feature_table tr.even:hover td.active,  table.feature_table tr.odd:hover td.active {  
+	background:#dcdcdc;
+	-moz-transition: all 0.2s linear 0s;
+	-webkit-transition: all 0.2s linear 0s;
+	-o-transition: all 0.2s linear 0s;
+}
+
 /* --- Table Grey --- */
 table.feature_table.table_grey thead th {
 	/* for non-css3 browsers */
@@ -1470,7 +1478,7 @@ table.footer-list, table.footer-list:hover {
 	-webkit-box-shadow:none;
 	box-shadow:none;
 }
-table.footer-list tr:hover td,  table.footer-list tr.even:hover td.active,  table.footer-list tr.odd:hover td.active {  background: transparent  }
+table.footer-list tr:hover td,  table.footer-list tr.even:hover td.active,  table.footer-list tr.odd:hover td.active {  background: transparent;  }
 
 
 /******************************
