--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -18,6 +18,14 @@ div#region-user-second {
 	clear:both;
 }
 
+/****************
+* specific body styles *
+*****************/
+
+.news-page-thumbnail-image {
+	float:left;
+}
+
 /*****************/
 /* footer region */
 /*****************/
