--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -24,6 +24,9 @@ div#region-user-second {
 
 .news-page-thumbnail-image {
 	float:left;
+	margin-right:10px;
+	margin-bottom:5px;
+	border:solid 1px #000;
 }
 
 /*****************/
