--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
@@ -55,7 +55,7 @@ body.front {
 /**********************************************
  * TABS AND HOMEPAGE SPECIFIC CONTENT STYLES  *
  **********************************************/
-#quicktabs-home_page_tabs ul, #whats-happening, .pane-quicktabs-undergraduate-admission-tabs .item-list ul, #quicktabs-library_tabs ul {
+#quicktabs-home_page_tabs ul, #whats-happening, #quicktabs-undergraduate_admission_tabs .item-list ul, #quicktabs-library_tabs ul {
 	min-height:23px;
 	width:508px;
 	margin:0px;
@@ -75,21 +75,21 @@ body.front {
 	border-top-left-radius: 6px;
 	border-bottom-right-radius: 6px;
 }
-.pane-quicktabs-undergraduate-admission-tabs .item-list ul {
+#quicktabs-undergraduate_admission_tabs .item-list ul {
 	width:380px;
 }
 #quicktabs-library_tabs .item-list ul {
 	width:460px;
 }
-#quicktabs-home_page_tabs li, .pane-quicktabs-undergraduate-admission-tabs li, #quicktabs-library_tabs li {
+#quicktabs-home_page_tabs li, #quicktabs-undergraduate_admission_tabs li, #quicktabs-library_tabs li {
 	margin:0px;
 	margin-left:5px;
 	padding:3px 9px 8px 9px;
 }
-#quicktabs-home_page_tabs li a:link, .pane-quicktabs-undergraduate-admission-tabs li a:link, #quicktabs-library_tabs li a:link {
+#quicktabs-home_page_tabs li a:link, #quicktabs-undergraduate_admission_tabs li a:link, #quicktabs-library_tabs li a:link {
 	color:#fff;
 }
-#quicktabs-home_page_tabs li:hover, .pane-quicktabs-undergraduate-admission-tabs li:hover, #quicktabs-library_tabs li:hover {
+#quicktabs-home_page_tabs li:hover, #quicktabs-undergraduate_admission-tabs li:hover, #quicktabs-library_tabs li:hover {
 	-webkit-border-top-right-radius:6px;
 	-webkit-border-top-left-radius: 6px;
 	-moz-bwel!1414
@@ -100,11 +100,11 @@ body.front {
 	border-bottom:none;
 	background:#fff;
 }
-#quicktabs-home_page_tabs li:hover a, .pane-quicktabs-undergraduate-admission-tabs li:hover a, #quicktabs-library_tabs li:hover a{
+#quicktabs-home_page_tabs li:hover a, #quicktabs-undergraduate_admission_tabs li:hover a, #quicktabs-library_tabs li:hover a{
 	color:#27282d;
 
 }
-#quicktabs-home_page_tabs li.active, .pane-quicktabs-undergraduate-admission-tabs li.active, #quicktabs-library_tabs li.active {
+#quicktabs-home_page_tabs li.active, #quicktabs-undergraduate_admission_tabs li.active, #quicktabs-library_tabs li.active {
 	-webkit-border-top-right-radius:6px;
 	-webkit-border-top-left-radius: 6px;
 	-moz-border-radius-topleft: 6px;
@@ -114,10 +114,10 @@ body.front {
 	border-bottom:none;
 	background:#fff;
 }
-#quicktabs-home_page_tabs li.active a, .pane-quicktabs-undergraduate-admission-tabs li.active a, #quicktabs-library_tabs li.active a {
+#quicktabs-home_page_tabs li.active a, #quicktabs-undergraduate_admission_tabs li.active a, #quicktabs-library_tabs li.active a {
 	color:#27282d;
 }
-.pane-quicktabs-home-page-tabs, .pane-quicktabs-undergraduate-admission-tabs, #quicktabs-library_tabs {
+.pane-quicktabs-home-page-tabs, .pane-quicktabs-undergraduate-admission-tabs, .pane-quicktabs-library-tabs {
 	max-width:508px;
 	min-height:274px;
 	-moz-box-shadow: 3px 3px 4px #dddedf;
