--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
@@ -98,8 +98,7 @@ body.front {
 #quicktabs-home_page_tabs li:hover, #quicktabs-undergraduate_admission_tabs li:hover, #quicktabs-library_tabs li:hover {
 	-webkit-border-top-right-radius:6px;
 	-webkit-border-top-left-radius: 6px;
-	-moz-bwel!1414
-	order-radius-topleft: 6px;
+	-moz-border-radius-topleft: 6px;
 	-moz-border-radius-topright: 6px;
 	border-top-left-radius: 6px;
 	border-top-right-radius: 6px;
