--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
@@ -23,7 +23,10 @@ body {
 }
 
 
-
+h2.pane-title {
+	font-size:20px;
+	line-height:24px;
+}
 
 /******************************
  *  HOMEPAGE HEADER           *
