template update to change class of 5-5-2 panes, css

--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -35,7 +35,10 @@ div#region-user-second {
 	height:250px;
 	width:inherit;
 }
-
+#student-activities-left {
+	height:500px;
+	width:inherit;
+}
 /*****************/
 /* footer region */
 /*****************/
