--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -38,6 +38,7 @@ div#region-user-second {
 #student-activities-left {
 	height:500px;
 	width:inherit;
+	color:inherit;
 }
 /*****************/
 /* footer region */
